// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InputPassword should render as a password field 1`] = `
<DocumentFragment>
  <div
    class="fixed invisible w-auto whitespace-nowrap"
  >
    …
  </div>
  <div
    class="Input__InputWrapperStyled-wu99qs-0 jYUFQr"
  >
    <div
      class="flex relative flex-1 h-full"
    >
      <input
        class="p-0 w-full bg-transparent border-none focus:ring-0 Input__InputStyled-wu99qs-1 ioFtLo no-ligatures"
        data-testid="InputPassword"
        type="password"
        value=""
      />
    </div>
    <div
      class="flex items-center space-x-3 divide-x divide-theme-secondary-300 text-theme-primary-300 dark:divide-theme-secondary-800 dark:text-theme-secondary-600"
    >
      <div
        class=""
      >
        <button
          class="flex relative justify-center items-center w-full h-full text-2xl focus:outline-none group"
          data-testid="InputPassword__toggle"
          type="button"
        >
          <div
            class="absolute inset-0 -m-1 rounded group-focus-visible group-focus:ring-2 ring-theme-primary-400"
          />
          <div
            class="sc-bdfBwQ fPrsah"
            height="1em"
            width="1em"
          >
            <svg>
              eye.svg
            </svg>
          </div>
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`InputPassword should render as a password isInvalid 1`] = `
<DocumentFragment>
  <div
    class="fixed invisible w-auto whitespace-nowrap"
  >
    …
  </div>
  <div
    class="Input__InputWrapperStyled-wu99qs-0 jXtMoQ"
  >
    <div
      class="flex relative flex-1 h-full"
    >
      <input
        aria-invalid="true"
        class="p-0 w-full bg-transparent border-none focus:ring-0 Input__InputStyled-wu99qs-1 ioFtLo no-ligatures"
        data-testid="InputPassword"
        name="test"
        type="password"
        value=""
      />
    </div>
    <div
      class="flex items-center space-x-3 divide-x divide-theme-secondary-300 text-theme-danger-500 dark:divide-theme-secondary-800"
    >
      <span
        data-errortext="Error message for password"
        data-testid="Input__error"
      >
        <div
          class="sc-bdfBwQ iyevwF text-theme-danger-500"
          height="20"
          width="20"
        >
          <svg>
            alert-warning.svg
          </svg>
        </div>
      </span>
      <div
        class="pl-3"
      >
        <button
          class="flex relative justify-center items-center w-full h-full text-2xl focus:outline-none group"
          data-testid="InputPassword__toggle"
          type="button"
        >
          <div
            class="absolute inset-0 -m-1 rounded group-focus-visible group-focus:ring-2 ring-theme-primary-400"
          />
          <div
            class="sc-bdfBwQ fPrsah"
            height="1em"
            width="1em"
          >
            <svg>
              eye.svg
            </svg>
          </div>
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
